Updated SISLRA & NITA events for the next season. Some Clean up and margin spacing fixes.

--- a/src/CSS/SISLRA.css
+++ b/src/CSS/SISLRA.css
@@ -247,7 +247,7 @@ input {
 .indexSchedule {
   margin-top: -10px;
   margin: 0px;
-  margin-left: 10px;
+  margin-left: 15px;
   cursor: default;
   width: 260px;
   -webkit-animation-delay: 1s;
